# cmd/handlers.go
@@ -161,6 +161,10 @@ func initHTTPHandlers(e *echo.Echo, a *App) {
 		g.GET("/api/campaigns/running/stats", pm(a.GetRunningCampaignStats, "campaigns:get_all", "campaigns:get"))
 		g.GET("/api/campaigns/:id", pm(hasID(a.GetCampaign), "campaigns:get_all", "campaigns:get"))
 		g.GET("/api/campaigns/analytics/:type", pm(a.GetCampaignViewAnalytics, "campaigns:get_analytics"))
+		g.GET("/api/campaigns/:id/report/summary", pm(hasID(a.GetCampaignReportSummary), "campaigns:get_analytics"))
+		g.GET("/api/campaigns/:id/report/timeseries", pm(hasID(a.GetCampaignReportSeries), "campaigns:get_analytics"))
+		g.GET("/api/campaigns/:id/report/links", pm(hasID(a.GetCampaignReportLinks), "campaigns:get_analytics"))
+		g.GET("/api/campaigns/:id/report/recipients", pm(hasID(a.GetCampaignReportRecipients), "campaigns:get_analytics"))
 		g.GET("/api/campaigns/:id/preview", pm(hasID(a.PreviewCampaign), "campaigns:get_all", "campaigns:get"))
 		g.POST("/api/campaigns/:id/preview/archive", pm(hasID(a.PreviewCampaignArchive), "campaigns:get_all", "campaigns:get"))
 		g.POST("/api/campaigns/:id/preview", pm(hasID(a.PreviewCampaign), "campaigns:get_all", "campaigns:get"))
@@ -184,6 +188,7 @@ func initHTTPHandlers(e *echo.Echo, a *App) {
 		g.GET("/api/templates/:id/preview", pm(hasID(a.PreviewTemplate), "templates:get"))
 		g.POST("/api/templates/preview", pm(a.PreviewTemplateBody, "templates:get"))
 		g.POST("/api/templates", pm(a.CreateTemplate, "templates:manage"))
+		g.POST("/api/templates/:id/clone", pm(hasID(a.CloneTemplate), "templates:manage"))
 		g.PUT("/api/templates/:id", pm(hasID(a.UpdateTemplate), "templates:manage"))
 		g.PUT("/api/templates/:id/default", pm(hasID(a.TemplateSetDefault), "templates:manage"))
 		g.DELETE("/api/templates/:id", pm(hasID(a.DeleteTemplate), "templates:manage"))
@@ -197,6 +202,9 @@ func initHTTPHandlers(e *echo.Echo, a *App) {
 		g.GET("/api/profile", a.GetUserProfile)
 		g.PUT("/api/profile", a.UpdateUserProfile)
 		g.GET("/api/users", pm(a.GetUsers, "users:get"))
+		g.GET("/api/users/:id/integration-tokens", pm(hasID(a.GetUserIntegrationTokens), "users:manage"))
+		g.POST("/api/users/:id/integration-tokens", pm(hasID(a.CreateUserIntegrationToken), "users:manage"))
+		g.DELETE("/api/users/:id/integration-tokens/:token_id", pm(hasID(a.DeleteUserIntegrationToken), "users:manage"))
 		g.GET("/api/users/:id", pm(hasID(a.GetUser), "users:get"))
 		g.POST("/api/users", pm(a.CreateUser, "users:manage"))
 		g.PUT("/api/users/:id", pm(hasID(a.UpdateUser), "users:manage"))
